common/onepanel/overlays/cloud/service-onepanelcoreui-onepanel.yaml
# onepanel-core-ui service
apiVersion: v1
kind: Service
metadata:
  name: onepanel-core-ui
  namespace: onepanel
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: "http"
  selector:
    app: onepanel-core-ui
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: core-ui
  namespace: onepanel
spec:
  hosts:
    - $(applicationHost)
  gateways:
    - istio-system/ingressgateway
  http:
    - match:
        - uri:
            prefix: $(applicationUiPath)
      route:
        - destination:
            port:
              number: 80
            host: onepanel-core-ui
